gccida/g2/flow_loops_find
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/flow_loops_find/src/cfgloop.c:1184:12: error: expected expression
*( _OWORD *)&loops->num = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/flow_loops_find/src/cfgloop.c:1184:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&loops->num = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/flow_loops_find/src/cfgloop.c:1186:12: error: expected expression
*( _OWORD *)&loops->tree_root = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/flow_loops_find/src/cfgloop.c:1186:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&loops->tree_root = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/flow_loops_find/src/cfgloop.c:1187:12: error: expected expression
*( _OWORD *)&loops->cfg.dfs_order = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/flow_loops_find/src/cfgloop.c:1187:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&loops->cfg.dfs_order = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/flow_loops_find/src/obj/cfgloop.o] Error 1
